# axe_game

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile_commands.json
src/: axe.cpp  axe.hpp  boundingbox2d.cpp  boundingbox2d.hpp  entity.hpp  game.cpp  game.hpp  main.cpp  player.cpp  player.hpp
